RESOLVED FIXED61298
VO doesn't work with HTML5 range (slider) input @step attribute
https://bugs.webkit.org/show_bug.cgi?id=61298
Summary VO doesn't work with HTML5 range (slider) input @step attribute
chris fleizach
Reported 2011-05-23 12:41:11 PDT
If the step attribute is present, increment and decrement do not work
Attachments
patch (7.54 KB, patch)
2011-05-23 12:43 PDT, chris fleizach
ddkilzer: review+
chris fleizach
Comment 1 2011-05-23 12:43:04 PDT
chris fleizach
Comment 2 2011-05-23 12:43:25 PDT
David Kilzer (:ddkilzer)
Comment 3 2011-05-23 15:52:08 PDT
Comment on attachment 94465 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=94465&action=review r=me, but consider making the test try to go below the minimum value of the slider as well. > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:890 > + changeValueByPercent((increase) ? 5 : -5); Nit: Don't need parenthesis around (increase) here. > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2224 > + value += (increase) ? step : -step; Nit: Don't need parenthesis around (increase) here. > LayoutTests/platform/mac/accessibility/range-alter-by-step.html:39 > + obj.increment(); > + shouldBe("obj.intValue", "100"); Nice job of testing going over the maximum value! I'd really like to see it try to go below the minimum value as well in this test.
chris fleizach
Comment 4 2011-05-23 17:32:15 PDT
Note You need to log in before you can comment on or make changes to this bug.