VO doesn't work with HTML5 range (slider) input @step attribute https://bugs.webkit.org/show_bug.cgi?id=61298

Reviewed by David Kilzer.

Source/WebCore:

Test: platform/mac/accessibility/range-alter-by-step.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::stepValueForRange):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::alterSliderValue):
(WebCore::AccessibilityRenderObject::increment):
(WebCore::AccessibilityRenderObject::decrement):
(WebCore::AccessibilityRenderObject::stepValueForRange):
(WebCore::AccessibilityRenderObject::changeValueByStep):
* accessibility/AccessibilityRenderObject.h:

LayoutTests:

* platform/mac/accessibility/range-alter-by-step-expected.txt: Added.
* platform/mac/accessibility/range-alter-by-step.html: Added.



Canonical link: https://commits.webkit.org/76692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87111 268f45cc-cd09-0410-ab3c-d52691b4dbfc